[package]
name = "async-mock"
description = "Async trait mocking"
version = "0.1.3"
edition = "2021"
authors = ["Jean-Sébastien Dominique <jd@amateurradio.engineer>"]
repository = "https://github.com/SignalWhisperer/async-mock-rs"
license = "MIT"
keywords = ["async", "mock", "test"]
categories = ["development-tools::testing"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = { version = "2.0.38", features = ["full"] }

[dev-dependencies]
async-trait = "0.1.74"
futures = "0.3.28"
tokio = { version = "1.33.0", features = ["full"] }
